--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "neve-launcher",
     "preductname": "Neve Launcher",
-    "version": "2.0.6",
-    "description": "Launcher minecraft du projet Neve par HyKo.dev",
+    "version": "2.0.7",
+    "description": "Launcher minecraft du projet Neve par HyKo",
     "main": "src/app.js",
     "author": "HyKo",
     "url": "https://nevefiles.hyko.dev/",
@@ -12,7 +12,7 @@
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "build": "node build.js --build",
-        "icon": "node build.js --icon=https://raw.githubusercontent.com/itshyko/neve-launcher/main/src/assets/images/icon.png",
+        "icon": "node build.js --icon=https://nevefiles.hyko.dev/icon.png",
         "dev": "nodemon --exec npm start"
     },
     "license": "CC0",
