--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Launcher Build
+
 on:
   push:
     branches: [ main ]
@@ -37,12 +38,13 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          # Change to a compatible Node.js version
+          node-version: '>=19.0.0'
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -50,11 +52,12 @@ jobs:
           python-version: 3.x
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          npm install
         shell: bash
 
-      - name: Build
+      - name: Build Launcher
         env:
-          GH_TOKEN: ${{ secrets.github_token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Ensure this secret is defined in GitHub settings
         run: npm run build
         shell: bash
