--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "discord-rpc": "^4.0.1",
         "electron-updater": "^6.1.4",
+        "javascript-obfuscator": "^4.1.1",
         "minecraft-java-core": "^3.8.1",
         "node-fetch": "^2.7.0"
     },
