--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Launcher Build
+
 on:
   push:
     branches: [ main ]
@@ -12,7 +13,7 @@ jobs:
 
       - name: Get version
         run: echo "version=$(jq -r .version package.json)" >> $GITHUB_ENV
-      
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -37,12 +38,12 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: '>=19.0.0'
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -50,11 +51,31 @@ jobs:
           python-version: 3.x
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          npm install
         shell: bash
 
-      - name: Build
+      - name: Préparer le dossier de sortie
+        run: mkdir -p dist
+
+      - name: Build Launcher
         env:
-          GH_TOKEN: ${{ secrets.GITH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITH_TOKEN }}
         run: npm run build
         shell: bash
+
+      - name: Debug Build Process
+        run: |
+          echo "Vérification des fichiers générés après le build"
+          find .
+        shell: bash
+
+      - name: Upload to GitHub Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITH_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/ # Remplacez `dist/` si les fichiers sont ailleurs
+          asset_name: "${{ matrix.os }}_build.zip"
+          asset_content_type: application/zip
