--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,6 @@ jobs:
     needs: create-release
     runs-on: ${{ matrix.os }}
 
-    permissions:
-      contents: write
-
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -51,18 +48,10 @@ jobs:
           python-version: 3.x
 
       - name: Install Dependencies
-        run: |
-          npm install
-        shell: bash
-
-      - name: Préparer le dossier de sortie
-        run: mkdir -p dist
+        run: npm install
 
       - name: Build Launcher
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITH_TOKEN }}
         run: npm run build
-        shell: bash
 
       - name: Debug Build Process
         run: |
@@ -76,6 +65,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/ # Remplacez `dist/` si les fichiers sont ailleurs
+          asset_path: dist/<chemin_vers_votre_fichier>.zip # Remplacez par le fichier exact généré
           asset_name: "${{ matrix.os }}_build.zip"
           asset_content_type: application/zip
