--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
           draft: false
           prerelease: ${{ contains(env.version, 'beta') || contains(env.version, 'alpha') }}
 
+      - name: Debug Release Outputs
+        run: |
+          echo "Release Upload URL: ${{ steps.create_release.outputs.upload_url }}"
+          echo "Version: ${{ env.version }}"
+
   build-launcher:
     needs: create-release
     runs-on: ${{ matrix.os }}
@@ -42,11 +47,6 @@ jobs:
         with:
           node-version: '>=19.0.0'
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.x
-
       - name: Install Dependencies
         run: npm install
 
@@ -55,9 +55,8 @@ jobs:
 
       - name: Debug Build Process
         run: |
-          echo "Vérification des fichiers générés après le build"
+          echo "Liste des fichiers générés après le build :"
           find .
-        shell: bash
 
       - name: Upload to GitHub Release
         uses: actions/upload-release-asset@v1
@@ -65,6 +64,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/<chemin_vers_votre_fichier>.zip # Remplacez par le fichier exact généré
-          asset_name: "${{ matrix.os }}_build.zip"
+          asset_path: dist/ubuntu-latest_build.zip  # Ajustez le chemin si nécessaire
+          asset_name: ubuntu-latest_build.zip
           asset_content_type: application/zip
